# Ceres_examples

./: README.md
00_Hello_world/: CMakeLists.txt
01_Ceres/00_Hello_world/: helloworld.cc
01_Ceres/01_Curve_fitting/: gaussNewton.cpp
01_Ceres/02_Simple/: CMakeLists.txt  simple.cc
02_Eigen/: demo_divers  demo_inverse  demo_mult  demo_trans  mat_transform  mat_transform.cpp  matrix_divers.cpp  matrix_inversion.cpp  matrix_multiply.cpp  matrix_translation.cpp
03_Cmake/01_Demo_cmake/: main.cpp
03_Cmake/01_Demo_cmake/include/: uav.h
03_Cmake/01_Demo_cmake/src/: uav.cpp
03_Cmake/02_uav_trajectories/src/: uav.cpp
04_XML/: order.xml  parse_XML.py  person.xml  uav_data.xml  write2_XML.py  write3_XML.py  write4_XML.py  write_XML.py  write_uav_XML.py
